<resources>
    <string name="app_name">WishList Hackathon</string>

    // Connexion Page
    <string name="connexion">Connexion</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="error_password">Pseudo déjà utilisé ou mot de passe erroné</string>
    <string name="error_fill">Tu dois remplir tous les champs demandés</string>
    <string name="created_user">Bienvenue</string>
    <string name="title_activity_wish">WishActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    // AddWish Page
    <string name="description">Description</string>
    <string name="lien">Lien</string>
    <string name="annuler">Annuler</string>
    <string name="creer">Créer</string>

    // AddWish PopUp Page
    <string name="valider">Valider et continuer</string>
    <string name="choisir_depuis_nla_gallerie">GALERIE\nPHOTO</string>
    <string name="nouvelle_photo">APPAREIL\nPHOTO</string>
    <string name="upload_ta_photo">GALERIE\nPHOTO</string>
    <string name="prendre_nouvelle_photo">APPAREIL\nPHOTO</string>
    <string name="envoi_photo">ENVOI\nPHOTO</string>
    <string name="toast_error_profile">Tu es déjà sur la page Profil</string>
    <string name="toast_error_upload">Echec de l\'upload</string>
    <string name="toast_upload_success">Upload réussi !</string>
    <string name="progressdialog_upload">Uploading ...</string>

    // Share Button
    <string name="share_text">Télécharge notre appli et crée toi ta propre WhishList !</string>
    <string name="WishActivityTitle">Ma liste de souhaits</string>
    <string name="wishlist">WishList</string>
    <string name="offrir">OFFRIR</string>
    <string name="textview">TextView</string>
    <string name="lien_internet">LIEN\nINTERNET</string>
    <string name="ajouter_un_lien_pour_l_image">Ajouter un lien pour l\'image</string>
    <string name="modifier">MODIFIER</string>
    <string name="supprimer_ce_souhait">SUPPRIMER CE SOUHAIT</string>
    <string name="rechercher_un_ami">Rechercher un ami</string>
    <string name="recherche">Recherche</string>

</resources>
