<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.wishlisthackathon.AddWishActivity"
    style="@style/background">

    <ImageView
        android:id="@+id/wishImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/present"/>

    <EditText
        style="@style/hint"
        android:id="@+id/descriptionImage"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/linkImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishImage" />

    <EditText
        style="@style/hint"
        android:id="@+id/linkImage"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/lien"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionImage" />

    <Button
        style="@style/button"
        android:id="@+id/cancel"
        android:text="@string/annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonModify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkImage" />

    <Button
        style="@style/button"
        android:id="@+id/buttonModify"
        android:text="@string/creer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@+id/linkImage" />
</android.support.constraint.ConstraintLayout>
