<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snow5"
    tools:context="fr.wcs.wishlisthackathon.MainActivity">

    <EditText
        android:id="@+id/connexionUserName"
        style="@style/connexion_text"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/pseudo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/connexionUserPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/connexionUserPassword"
        style="@style/connexion_text"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonConnexionSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/connexionUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonConnexionSend"
        style="@style/button"
        android:layout_marginBottom="16dp"
        android:text="@string/connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/connexion_title"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/arizonia"
        android:text="@string/wishlist"
        app:layout_constraintBottom_toTopOf="@+id/simpleProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

</android.support.constraint.ConstraintLayout>
