<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.wishlisthackathon.AddWishActivity_PopUp">

    <Button
        android:id="@+id/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/nouvelle_photo"
        app:layout_constraintRight_toLeftOf="@+id/chooseImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/wishImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chooseImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/choisir_depuis_nla_gallerie"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/takePhoto"
        app:layout_constraintBottom_toTopOf="@+id/wishImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/valider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishImageView" />

    <ImageView
        android:id="@+id/wishImageView"
        android:clickable="true"
        android:layout_width="265dp"
        android:layout_height="217dp"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonOK"
        app:layout_constraintTop_toBottomOf="@+id/takePhoto"
        app:layout_constraintHorizontal_bias="0.504" />

</android.support.constraint.ConstraintLayout>
